termino el main y section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <a class="nav-link" id="hover-links" aria-current="page" href="#">Acerca de mi</a>
             </li>
             <li class="nav-item">
-              <a class="portfolio nav-link" href="#">Portfolio</a>
+              <a class="portfolio nav-link active" href="#">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="hover-links" href="#">Experiencia</a>
@@ -84,10 +84,67 @@
           <div class="col-xs-12 col-md-6 p-5 pt-2 d-flex flex-column justify-content-center align-items-center">
             <h1 class="nombre p-3">Marcos Gonzalvez</h1>
             <h3 class="rubro p-2">Full Stack Developer en <a href="https://desafiolatam.com/" class="desafioLatam" target="_blank">Desafio Latam</a></h3>
-            <button type="button" class="btn">Programar una reunion</button>
+            <button type="button" class="btn"><a href="">Descargar CV</a></button>
           </div>
         </div>
       </header>
+
+      <main class="container">
+        <div class="row text-center container-habilidades">
+          <div class="habilidades col-xs-12 col-md-3">
+              <h3 class="titulo-habilidades">HTML</h3>
+              <p></p>
+          </div>
+          <div class="habilidades col-xs-12 col-md-3">
+              <h3 class="titulo-habilidades">CSS</h3>
+              <p></p>
+          </div>
+          <div class="habilidades col-xs-12 col-md-3">
+              <h3 class="titulo-habilidades">BOOTSTRAP</h3>
+              <p></p>
+          </div>
+          <div class="habilidades col-xs-12 col-md-3">
+              <h3 class="titulo-habilidades">JAVASCRIPT</h3>
+              <p></p>
+          </div>
+        </div>
+    </main>
+
+      <section class="container acerca-de">
+        <div class="row p-4 mt-4 descripcion-de-mi">
+          <div class="col-xs-12 col-md-6 text-justify">
+            <p>Estudiando Desarrollo Web Full Stack con un fuerte interés en el diseño web y Front-End. Estoy en constante búsqueda de oportunidades que me permitan desarrollar mis habilidades y crecer en esta emocionante industria. <br>
+              Tengo conocimientos en HTML, CSS, Bootstrap y JavaScript. Motivado y comprometido a desarrollar nuevos conocimientos, implementar mejoras, para poder crecer en esta industria y avanzar en mi carrera.</p>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <img class="img-fluid" src="assets/imgs/programando.jpg" alt="">
+          </div>
+        </div>
+      </section>
+
+
+      <footer class="container">
+        <div class="row">
+          <p class="col">Marcos Gonzalvez</p>
+          <p class="col">Todos los Derechos Reservados</p>
+          <div class="col">
+            <ul class="navbar-nav  flex-row flex-wrap text-light">
+              <li class="nav-item col-6 col-md-auto p-3">
+                  <a class="nav-link" id="hover-links" href="#" >
+                    <i class="bi bi-github"></i>
+                    <small class="d-md-none ms-2">GitHub</small>
+                  </a>  
+              </li>
+              <li class="nav-item col-6 col-md-auto p-3">
+                <a class="nav-link" id="hover-links" href="#" >
+                  <i class="bi bi-linkedin"></i>
+                  <small class="d-md-none ms-2">Linkedin</small>
+                </a>  
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
