--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
      <!-- Linkeando el CSS -->
-     <link rel="stylesheet" href="assets/css/style.css">
+     <link rel="stylesheet" href="../assets/css/style.css">
 
      <!-- link a Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,8 +28,8 @@
         <div class="container-fluid">
         <!-- icono o nombre -->
 
-        <a class="navbar-brand link-logo" href="#">
-          <img class="nav-logo" src="assets/imgs/perfilnaranja.jpg" alt="">
+        <a class="navbar-brand link-logo" href="../index.html">
+          <img class="nav-logo" src="../assets/imgs/perfilnaranja.jpg" alt="">
         </a>
             
         <!-- boton del menu -->
@@ -45,7 +45,7 @@
               <a class="nav-link" id="hover-links" aria-current="page" href="#">Acerca de mi</a>
             </li>
             <li class="nav-item">
-              <a class="portfolio nav-link active" href="pages/portfolio.html">Portfolio</a>
+              <a class="portfolio nav-link active" href="#">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="hover-links" href="#">Experiencia</a>
@@ -75,53 +75,9 @@
         </div>  
       </nav>
 
-
-      <header class="container text-center">
-        <div class="row">
-          <div class="col-xs-12 col-md-6 p-5">
-            <img class="img-fluid foto-marcos" src="assets/imgs/perfilblanco.jpg" alt="">
-          </div>
-          <div class="col-xs-12 col-md-6 p-5 pt-2 d-flex flex-column justify-content-center align-items-center">
-            <h1 class="nombre p-3">Marcos Gonzalvez</h1>
-            <h3 class="rubro p-2">Full Stack Developer en <a href="https://desafiolatam.com/" class="desafioLatam" target="_blank">Desafio Latam</a></h3>
-            <button type="button" class="btn"><a href="">Descargar CV</a></button>
-          </div>
-        </div>
-      </header>
-
-      <main class="container">
-        <div class="row text-center container-habilidades">
-          <div class="habilidades col-xs-12 col-md-3">
-              <h3 class="titulo-habilidades">HTML</h3>
-              <p></p>
-          </div>
-          <div class="habilidades col-xs-12 col-md-3">
-              <h3 class="titulo-habilidades">CSS</h3>
-              <p></p>
-          </div>
-          <div class="habilidades col-xs-12 col-md-3">
-              <h3 class="titulo-habilidades">BOOTSTRAP</h3>
-              <p></p>
-          </div>
-          <div class="habilidades col-xs-12 col-md-3">
-              <h3 class="titulo-habilidades">JAVASCRIPT</h3>
-              <p></p>
-          </div>
-        </div>
-    </main>
-
-      <section class="container acerca-de">
-        <div class="row p-4 mt-4 descripcion-de-mi">
-          <div class="col-xs-12 col-md-6 text-justify">
-            <p>Estudiando Desarrollo Web Full Stack con un fuerte interés en el diseño web y Front-End. Estoy en constante búsqueda de oportunidades que me permitan desarrollar mis habilidades y crecer en esta emocionante industria. <br>
-              Tengo conocimientos en HTML, CSS, Bootstrap y JavaScript. Motivado y comprometido a desarrollar nuevos conocimientos, implementar mejoras, para poder crecer en esta industria y avanzar en mi carrera.</p>
-          </div>
-          <div class="col-xs-12 col-md-6">
-            <img class="img-fluid" src="assets/imgs/programando.jpg" alt="">
-          </div>
-        </div>
-      </section>
-
+      <main>
+        
+      </main>
 
       <footer class="container">
         <div class="row text-center align-items-center p-3">
@@ -143,6 +99,11 @@
           </div>
         </div>
       </footer>
+
+
+
+
+
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
